Fixed styling issue where buttons wouldn't style on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@ body {
     text-align: center;
 }
 
-input[type="submit"]{ -webkit-appearance: none; }
+input[type="button"]{ -webkit-appearance: none; }
 
 h1 {
     font-size: 30px;
